<resources>
    <string name="app_name">대스모</string>

    <string name="home">홈</string>
    <string name="write">작성</string>
    <string name="user">내 정보</string>

    <string name="string_tag_all">전체</string>
    <string name="string_tag_emergency">긴급</string>
    <string name="string_tag_soccer">축구</string>
    <string name="string_tag_badminton">배드민턴</string>
    <string name="string_tag_basketball">농구</string>
    <string name="string_tag_etc">기타</string>

    <string name="string_apply">참가 신청</string>
    <string name="string_apply_cancel">참가 취소</string>
    <string name="string_closing">조기 마감</string>
    <string name="string_cancel">취소</string>
    <string name="string_await">대기</string>
    <string name="string_confirmed">확정</string>
    <string name="string_applyIdx">></string>

    <string name="string_writer">작성자 :</string>
    <string name="string_place">위치 -</string>
    <string name="string_deadline">마감 -</string>
    <string name="string_currentPerson">현재 신청 인원</string>
    <string name="string_end">-종료-</string>

    <string name="string_write">모집 글 작성</string>
    <string name="string_title">제목</string>
    <string name="string_content">설명</string>
    <string name="string_category">운동 종목(축구, 배드민턴, 농구, 기타)</string>
    <string name="string_where">운동 할 위치</string>
    <string name="string_number">같이 운동 할 인원 수 (나를 제외 한)</string>
    <string name="string_time">운동 할 시각 (yyyy-mm-dd hh:mm)</string>
    <string name="string_anonymous">익명</string>
    <string name="string_hidden">신청 리스트 숨김</string>

    <string name="string_login">로그인</string>
    <string name="string_register">회원가입</string>

    <string name="string_register_id">아이디 (4자 이상)</string>
    <string name="string_register_pw">비밀번호 (4자 이상)</string>
    <string name="string_register_name">이름 (2자 이상)</string>
    <string name="string_register_grade">학년 (1 ~ 3)</string>
    <string name="string_register_room">반 (1 ~ 4)</string>
    <string name="string_register_number">번호 (1 ~ 20)</string>
    <string name="string_register_profile">[선택] 프로필 이미지(URL)</string>

    <string name="string_myWrite">내가 쓴 글</string>
    <string name="string_myApply">내 신청 목록</string>
    <string name="string_hidded">신청 리스트를 숨긴 게시글 입니다!</string>
</resources>