<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="kr.hs.dgsw.sport_recruit.viewmodel.WriteViewModel" />

        <variable
            name="fragment"
            type="kr.hs.dgsw.sport_recruit.ui.fragment.WriteFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <TextView
            android:id="@+id/write_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jalnan"
            android:text="@string/string_write"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_write_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/check_anonymous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_title"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/et_content"
                    android:padding="12dp"
                    android:text="@={vm.title}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/write_title" />

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_content"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/et_category"
                    android:padding="12dp"
                    android:text="@={vm.content}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_title" />

                <EditText
                    android:id="@+id/et_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_category"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/et_location"
                    android:padding="12dp"
                    android:text="@={vm.category}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_content" />

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_where"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/et_number"
                    android:padding="12dp"
                    android:text="@={vm.place}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_category" />

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_number"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/et_time"
                    android:padding="12dp"
                    android:text="@={vm.personnel}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_location" />

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanumsquare_bold"
                    android:hint="@string/string_time"
                    android:inputType="datetime"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:text="@={vm.time}"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_write_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_number" />

            </LinearLayout>
        </ScrollView>

        <CheckBox
            android:id="@+id/check_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:checked="@={vm.anonymous}"
            android:fontFamily="@font/nanumsquare_bold"
            android:text="@string/string_anonymous"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_write_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/check_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.hidden}"
            android:fontFamily="@font/nanumsquare_bold"
            android:text="@string/string_hidden"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_write_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/check_anonymous" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_button_completion"
            android:fontFamily="@font/jalnan"
            android:onClick="@{() -> fragment.onClickWriteBtn()}"
            android:padding="10dp"
            android:text="@string/string_write"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>